Cleaned up links,

--- a/view/contact.html
+++ b/view/contact.html
@@ -15,10 +15,10 @@
             <a href="../index.html"><img class="nav-logo" src="../assets/KPLogoLBlue.png" alt="Business Logo" /></a>
             <nav>
                 <ul>
-                    <li><a href="#about-wrapper">About</a></li>
-                    <li><a href="#services-wrapper">Services</a></li>
-                    <li><a href="#testimonial-wrapper">Tesimonials</a></li>
-                    <li><a href="#faq-wrapper">FAQs</a></li>
+                    <li><a href="../index.html#about-wrapper">About</a></li>
+                    <li><a href="../index.html#services-wrapper">Services</a></li>
+                    <li><a href="../index.html#testimonial-wrapper">Tesimonials</a></li>
+                    <li><a href="../index.html#faq-wrapper">FAQs</a></li>
                     <li class="nav-btn"><a href="../view/contact.html">Contact</a></li>
                 </ul>
             </nav>
