--- a/style/_headerStructure.scss
+++ b/style/_headerStructure.scss
@@ -1,7 +1,7 @@
 @use 'variables' as v;
 // header{
 //     position: relative;
-   
+
 // }
 // nav items
 
@@ -15,21 +15,25 @@
     padding: 0 .5rem;
     padding-top: .5rem;
 }
-.mb-header{
+
+.mb-header {
     display: none;
 }
+
 nav {
     text-align: center;
 }
 
-ul {
+nav ul {
     display: flex;
     justify-content: center;
     padding: 0;
     list-style: none;
+
     li {
-        padding: 1rem .25rem;      
-        a{
+        padding: 1rem .25rem;
+
+        a {
             text-decoration: none;
             font-weight: bold;
             padding: .75rem;
@@ -37,6 +41,7 @@ ul {
             text-align: left;
             transition: .5s;
             font-size: clamp(1rem, 2vmin, 1.5rem);
+
             &:hover {
                 // color: white;
                 // background-color: v.$light-accent;
@@ -60,7 +65,8 @@ ul {
     height: 100%;
     gap: 1rem;
 }
-.header-title-container{
-padding: 2rem;
-width: 50%;
+
+.header-title-container {
+    padding: 2rem;
+    width: 50%;
 }
