--- a/style/index.css
+++ b/style/index.css
@@ -165,16 +165,16 @@ nav {
   text-align: center;
 }
 
-ul {
+nav ul {
   display: flex;
   justify-content: center;
   padding: 0;
   list-style: none;
 }
-ul li {
+nav ul li {
   padding: 1rem 0.25rem;
 }
-ul li a {
+nav ul li a {
   text-decoration: none;
   font-weight: bold;
   padding: 0.75rem;
@@ -183,7 +183,7 @@ ul li a {
   transition: 0.5s;
   font-size: clamp(1rem, 2vmin, 1.5rem);
 }
-ul li a:hover {
+nav ul li a:hover {
   background: #fff;
   border-radius: 8px;
   color: #1da9ef;
@@ -454,6 +454,36 @@ footer {
 footer:nth-child(1n) {
   padding: 1rem 0;
   text-align: center;
+}
+
+.collapse-content {
+  /*   display: none; */
+  background: #2370a0b1;
+  height: 0px;
+  color: white;
+  transition: 200ms ease-in;
+  margin-top: 0;
+  overflow: hidden;
+}
+
+.collapse-p {
+  margin: 0;
+  padding: 20px;
+}
+
+.collapse {
+  width: 100%;
+  height: 50px;
+  text-align: left;
+  padding-left: 20px;
+  margin-bottom: 0;
+}
+
+.active {
+  /*   display: block; */
+  height: 300px;
+  color: black;
+  transition: 200ms ease-in;
 }
 
 /*# sourceMappingURL=index.css.map */
