--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -1,7 +1,12 @@
 $light-accent: #1da9ef;
+// $light-accent: #0B6D9D; this is the version of the light accent color that has no contrast issues on light backgrounds. Doesn't look great. 
 // $light-accent: #191397;
 $dark-accent: #c30938;
 $light-hover: #2370a0b1;
 // $light-hover: #060071;
+$white: #f2f2f2;
+$grey: #5379921b;
+$grey-solid: #537992;
+$dark-grey: #222222;
 
 $radius: 8px;
