--- a/style/index.scss
+++ b/style/index.scss
@@ -4,9 +4,8 @@
 @use 'headerStructure';
 @use 'formStyle';
 @use 'cta';
-@use 'faq';
-@use 'medium';
 @use 'thanks';
 @use 'footer';
-@use 'collapse';
+@use 'process';
+@use 'medium';
 
