fixed contact from btn, added favicon to subpages

--- a/view/contact.html
+++ b/view/contact.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../style/index.css">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
     <!-- <script defer src="../js/date.js"></script>? -->
     <title>KP Builder | Contact</title>
 </head>
