--- a/view/thanks.html
+++ b/view/thanks.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/index.css">
-    <title>KP Builder | Thanks</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../style/index.css">
+  <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+  <title>KP Builder | Thanks</title>
 </head>
 
 <body class="thanks-body">
-          <div class="nav-container">
-            <a href="index.html"><img class="nav-logo" src="../assets/KPLogoLBlue.png" alt="Business Logo" /></a>
-          </div>
-          <section class="thanks-container">
-            
-              <h1>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h1>
-              <p class="thanks-p">
-                Thanks for reaching out!<br> We are excited to help you achieve your goals!
-              </p>
-              <a href="../index.html" id="cta-btn" class="cta-btn">Back to Home</a>
-          </section>
+  <div class="nav-container">
+    <a href="index.html"><img class="nav-logo" src="../assets/KPLogoLBlue.png" alt="Business Logo" /></a>
+  </div>
+  <section class="thanks-container">
+
+    <h1>KP BUILDERS - A CONTRACTOR YOU CAN TRUST</h1>
+    <p class="thanks-p">
+      Thanks for reaching out!<br> We are excited to help you achieve your goals!
+    </p>
+    <a href="../index.html" id="cta-btn" class="cta-btn">Back to Home</a>
+  </section>
 </body>
+
 </html>
