--- a/style/_formStyle.scss
+++ b/style/_formStyle.scss
@@ -16,12 +16,24 @@ form {
     }
 }
 
+button {
+    font-size: 16px;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-bottom: 0;
+    border: none;
+    background: v.$light-accent;
+    font-weight: 400;
+    color: v.$white;
+    border-radius: v.$radius;
+}
+
 form {
 
     input,
     textarea,
-    select,
-    button {
+    select {
         font-size: 16px;
         width: 100%;
         padding: 10px;
@@ -57,7 +69,7 @@ button:hover {
     padding: 3rem 0;
 
     div {
-        color:v.$white;
+        color: v.$white;
     }
 }
 
