--- a/style/index.css
+++ b/style/index.css
@@ -250,10 +250,22 @@ form h2 {
   color: #1da9ef;
 }
 
+button {
+  font-size: 16px;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-bottom: 0;
+  border: none;
+  background: #1da9ef;
+  font-weight: 400;
+  color: #f2f2f2;
+  border-radius: 8px;
+}
+
 form input,
 form textarea,
-form select,
-form button {
+form select {
   font-size: 16px;
   width: 100%;
   padding: 10px;
