--- a/style/_headerStructure.scss
+++ b/style/_headerStructure.scss
@@ -45,7 +45,7 @@ nav ul {
             &:hover {
                 // color: white;
                 // background-color: v.$light-accent;
-                background: #fff;
+                background: v.$white;
                 border-radius: v.$radius;
                 color: v.$light-accent;
                 padding: .75rem;
