--- a/view/contact.html
+++ b/view/contact.html
@@ -20,7 +20,7 @@
                     <li><a href="../index.html#about-wrapper">About</a></li>
                     <li><a href="../index.html#services-wrapper">Services</a></li>
                     <li><a href="../index.html#testimonial-wrapper">Tesimonials</a></li>
-                    <li><a href="../index.html#faq-wrapper">FAQs</a></li>
+                    <li><a href="#process-wrapper">Process</a></li>
                     <li class="nav-btn"><a href="../view/contact.html">Contact</a></li>
                 </ul>
             </nav>
