--- a/style/index.css
+++ b/style/index.css
@@ -214,7 +214,7 @@ nav ul li a {
   font-size: clamp(1rem, 2vmin, 1.5rem);
 }
 nav ul li a:hover {
-  background: #fff;
+  background: #f2f2f2;
   border-radius: 8px;
   color: #1da9ef;
   padding: 0.75rem;
