pointed thank you page to KP

--- a/view/contact.html
+++ b/view/contact.html
@@ -53,7 +53,7 @@
                 <div>Or call: <a href="tel:+18019419503">801-941-9503</a></div>
                 <input type="hidden" name="_template" value="table">
                 <!-- Need to update after site is created. -->
-                <input type="hidden" name="_next" value="https://www.mattpalmers.site/view/thanks.html">
+                <input type="hidden" name="_next" value="https://www.kpbuildersutah.com/view/thanks.html">
                 <input type="hidden" name="_subject" value="KP Builders Communication Request">
                 <!-- Too see other hidden field options and to learn about creating an archive go to: https://formsubmit.co/documentation -->
             </form>
