--- a/view/contact.html
+++ b/view/contact.html
@@ -28,35 +28,34 @@
     </header>
     <article class="contact-form">
         <div class="">
-            <form action="https://formsubmit.co/99ac8d502401381637abc5540601e1ca" method="POST">
+            <form action="https://formsubmit.co/e45604806e8e1ca355c351566792db97" method="POST">
                 <h2>MAKE AND INQUIRY</h2>
                 <label for="name">
-                    <input type="text" name="Name" id="name" placeholder="Name*" required />
+                  <input type="text" name="name" id="name" placeholder="Name*" required>
                 </label>
-                <label for="">
-                    <input type="email" name="email" id="email" placeholder="email" />
+                <label for="email">
+                  <input type="email" name="email" id="email" placeholder="email">
                 </label>
-                <label for=""></label>
-                <input type="tel" name="phone" id="phone" placeholder="Phone*" required />
+                <label for="phone">
+                  <input type="tel" name="phone" id="phone" placeholder="Phone*" required>
                 </label>
-                <select name="Job Type" id="jobType" required>
-                    <option value="" selected disabled>--Please choose an option--</option>
-                    <option value="bathroom">Bathroom</option>
-                    <option value="bedroom">Bedroom</option>
-                    <option value="concrete">Concrete</option>
-                    <option value="deck">Deck</option>
-                    <option value="kitchen">Kitchen</option>
-                    <option value="other">Other</option>
+                <select name="job type" id="jobType" required>
+                  <option value="" selected disabled>--Please choose an option--</option>
+                  <option value="bathroom">Bathroom</option>
+                  <option value="bedroom">Bedroom</option>
+                  <option value="concrete">Concrete</option>
+                  <option value="deck">Deck</option>
+                  <option value="kitchen">Kitchen</option>
+                  <option value="other">Other</option>
                 </select>
                 <textarea name="Additional Details" cols="30" rows="6" placeholder="Additional details"></textarea>
                 <button type="submit">Send Message</button>
                 <div>Or call: <a href="tel:+18019419503">801-941-9503</a></div>
-                <input type="hidden" name="_template" value="table">
-                <!-- Need to update after site is created. -->
+                <input type="hidden" name="_template" value="box">
                 <input type="hidden" name="_next" value="https://www.kpbuildersutah.com/view/thanks.html">
                 <input type="hidden" name="_subject" value="KP Builders Communication Request">
                 <!-- Too see other hidden field options and to learn about creating an archive go to: https://formsubmit.co/documentation -->
-            </form>
+              </form>
         </div>
     </article>
 </body>
