--- a/style/index.css
+++ b/style/index.css
@@ -193,16 +193,16 @@ div a {
 
 nav {
   text-align: center;
+  max-width: 760px;
 }
-
+nav .nav-icon {
+  display: none;
+}
 nav ul {
   display: flex;
   justify-content: center;
-  padding: 0;
+  padding-left: 0;
   list-style: none;
-}
-nav ul li {
-  padding: 1rem 0.25rem;
 }
 nav ul li a {
   text-decoration: none;
@@ -217,8 +217,6 @@ nav ul li a:hover {
   background: #f2f2f2;
   border-radius: 8px;
   color: #1da9ef;
-  padding: 0.75rem;
-  margin: auto 0;
 }
 
 .hero-container {
@@ -512,19 +510,6 @@ footer:nth-child(1n) {
     margin-top: 0;
   }
 }
-@media only screen and (max-width: 900px) {
-  nav {
-    display: none;
-  }
-
-  .nav-container {
-    justify-content: center;
-  }
-
-  .nav-logo {
-    height: 125px;
-  }
-}
 @media only screen and (max-width: 850px) {
   .cta-headshot {
     display: none;
@@ -541,6 +526,44 @@ footer:nth-child(1n) {
 @media only screen and (max-width: 710px) {
   .card {
     flex-basis: 100%;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+  nav li {
+    display: none;
+  }
+  nav .nav-icon {
+    display: block;
+  }
+
+  .nav-change, .nav-change a {
+    display: block;
+  }
+
+  .nav-btn-change {
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0.75rem;
+    margin: 0.5rem;
+    text-align: left;
+    transition: 0.5s;
+    font-size: clamp(1rem, 2vmin, 1.5rem);
+  }
+  .nav-btn-change:hover {
+    background: #f2f2f2;
+    border-radius: 8px;
+    color: #1da9ef;
+  }
+
+  .nav-container {
+    display: block;
+  }
+
+  .nav-logo {
+    margin: 1rem;
+    height: 150px;
   }
 }
 @media only screen and (max-width: 620px) {
